--- a/ReactionTesterProjector.html
+++ b/ReactionTesterProjector.html
@@ -8,7 +8,7 @@
             height: 200px;
             background-color: red;
             position: relative;
-            display: block;   /* As display has to be block everytime so make it default */
+
         }
        
 
@@ -40,10 +40,11 @@
             top = Math.random()*300;
             wh = ((Math.random()*400)+100);
 
-            document.getElementById("shape").style.marginLeft=left+"px"; // first of all for chenging mergin the code is "style.marginLeft" if you use "styleleft then it may refer to left of the object"
-            document.getElementById("shape").style.marginTop=top+"px"; // and the "  +"px"  " added because without it the css code of the element will be margin-top: 100;  thats will not work for changing margin but ig you add the "+"px"" the it will look like margin-top: 100px; and its right hehe
-            document.getElementById("shape").style.width=wh+"px";
-            document.getElementById("shape").style.height=wh+"px";
+            document.getElementById("shape").style.left=left;
+            document.getElementById("shape").style.top=top;
+            document.getElementById("shape").style.width=wh;
+            document.getElementById("shape").style.height=wh;
+            document.getElementById("shape").style.display="block";
             document.getElementById("shape").style.backgroundColor=getRandomColor();
             start = new Date().getTime();
         }
